--- a/kooplexhub/container/templates/container_new.html
+++ b/kooplexhub/container/templates/container_new.html
@@ -4,9 +4,8 @@
 {% load extras %}
 
 
-
 {% block realcontent %}
-<div class="container mt-2">
+<div class="container" style="overflow-x:hidden;">
   <form id="service_new" class="form-horizontal was-validated" action="{% url 'container:new' %}" method="post">
   {% csrf_token %}
   <div class="card bg-light border-secondary shadow p-3">
@@ -33,8 +32,9 @@
 
 {% block scripts %}
 <script>
-$("select[name='image'").change(function() {
-    $( "select option:selected" ).each(function() {
+{# when image selection changes, display the details in info panel #}
+$("select[name='image']").change(function() {
+    $( "select[name='image'] option:selected" ).each(function() {
         var id = $(this).attr("value");
         console.log( $( this ).text() + " -> " + id);
 	if (id === "") {
@@ -42,6 +42,51 @@ $("select[name='image'").change(function() {
 	} else {
 	    var description = $("#image-description-" + id).attr("value");
 	    $("#imageDescription").text(description);
+	}
+    });
+}).change();
+
+{# open websocket #}
+function so() {
+  console.log('open socket...');
+  const containerSocket = new WebSocket(
+    'wss://k8plex-test.vo.elte.hu/hub/ws/node_monitor/' //FIXME: server name hardcoded
+  );
+  containerSocket.onclose = function(e) {
+    console.error('Socket closed unexpectedly');
+  };
+  //console.log(containerSocket);
+  containerSocket.onmessage = function(e) {
+    const data = JSON.parse(e.data);
+    //console.log(data);
+    var command = data['command'];
+    var msg = data['message'];
+    var containerid = data['container-id'];
+    //console.log('SOCK: --> ' + command + ": " + msg);
+    if (command == 'monitor-node') {
+      console.log(data);
+      $("input[name='cpurequest']").attr("max", data["avail_cpu"]);
+      $("input[name='memoryrequest']").attr("max", data["avail_memory"]);
+    }
+  };
+  return containerSocket;
+};
+
+containerSocket = so();
+
+{# when node selection changes, retrieve node details #}
+$("select[name='node']").change(function() {
+    $( "select[name='node'] option:selected" ).each(function() {
+        var node = $(this).attr("value");
+        if (containerSocket.readyState != 1) {
+          console.log("Socket not open: " + containerSocket.readyState);
+          containerSocket = so();
+        }
+	if (node != "") {
+          containerSocket.send(JSON.stringify({
+            'command': 'monitor-node',
+            'node': node,
+          }));
 	}
     });
 }).change();
