container start/open in project app

--- a/kooplexhub/project/templates/project_list.html
+++ b/kooplexhub/project/templates/project_list.html
@@ -48,8 +48,6 @@
 
 {% block scripts %}
 <script>
-{# FIXME: onclick name open info #}
-
 {# open websocket #}
 function so() {
   console.log('open socket...');
@@ -142,7 +140,7 @@ $("#search_project").keyup(function() {
 
 {# show/hide button clicked #}
 $("a[id^=project-showhide-]").click(function() {
-  console.log( this );
+  // console.log( this );
   var pid = $( this ).attr("id").split("-", 3)[2];
   var cur_state = B($("#project-hidden-" + pid).val());
   if (projectSocket.readyState != 1) {
@@ -155,6 +153,116 @@ $("a[id^=project-showhide-]").click(function() {
     'hidden': cur_state,
   }));
 });
+
+{# when project name is clicked open info #}
+$("div[id^=project-name-]").click(function() {
+  //console.log( this );
+  var pid = $( this ).attr("id").split("-", 3)[2];
+  $("#projectInfoModal-" + pid).modal('show');
+});
+
+{# when project name is clicked open info #}
+$("div[id^=project-name-]").mouseenter(function() {
+  $( this ).css("cursor", "pointer");
+});
+
+{# open a container #} //FIXME: repetition
+function open_container(containerid) {
+  var url = $( "#url-containeropen-" + containerid).val();
+  console.log( "opening: " + url );
+  var win = window.open(url, '_blank');
+  if (win) {
+    win.focus();
+  }
+}
+
+{# open websocket #}
+function so2() {
+  console.log('open socket...');
+  const containerSocket = new WebSocket(
+    'wss://k8plex-test.vo.elte.hu/hub/ws/container_environment/{{ user.id }}/' //FIXME: server name hardcoded
+  );
+  containerSocket.onclose = function(e) {
+    console.error('Socket closed unexpectedly');
+  };
+  //console.log(containerSocket);
+  containerSocket.onmessage = function(e) {
+    const data = JSON.parse(e.data);
+    //console.log(data);
+    var command = data['command'];
+    var msg = data['message'];
+    var containerid = data['container-id'];
+    console.log('SOCK: --> ' + command + ": " + msg);
+    //if (command == 'feedback') {
+    //  feedback(data['message']);
+    //}
+    if (data['state'] == 'np') { //FIXME: Container.ST_NOTPRESENT
+      start_button(containerid);
+    } if (data['state'] == 'run') { //FIXME: Container.ST_RUNNING
+      open_button(containerid);
+    }
+  };
+  return containerSocket;
+};
+
+containerSocket = so2();
+
+//{# on load feedback messages panel is empty, hide it #}
+//$(document).ready(function () {
+//  var widget = $("#feedbackMessages");
+//  widget.hide();
+//});
+//
+//{# display some feedback messages #}
+//function feedback(msg) {
+//  var widget = $("#feedbackMessages");
+//  widget.show();
+//  $("#feedbackContent").append("<p>" + msg + "</p>");
+//  setTimeout(function () { widget.hide() }, 10000);
+//	// TODO: too many paragraphs, clear oldest
+//}
+
+{# disable start, and show spinner #}
+function spin_button(containerid) {
+  $("#container-start-" + containerid).parent().attr("disabled", true);
+  $("#container-start-" + containerid).addClass("d-none");
+  $("#spinner-start-" + containerid).removeClass("d-none");
+}
+
+{# enable button and show open button face #}
+function open_button(containerid) {
+  $("#container-start-" + containerid).parent().attr("disabled", false);
+  $("#spinner-start-" + containerid).addClass("d-none");
+  $("#container-open-" + containerid).removeClass("d-none");
+}
+
+{# enable button and show start button face #}
+function start_button(containerid) {
+  $("#container-start-" + containerid).parent().attr("disabled", false);
+  $("#spinner-start-" + containerid).addClass("d-none");
+  $("#container-start-" + containerid).removeClass("d-none");
+}
+
+
+{# start/open a container #}
+$("button[name=container-start]").click(function() {
+  var containerid = $( this ).val();
+  if (! $("#container-open-" + containerid).hasClass('d-none')) {
+    open_container(containerid);
+    return;
+  }
+  if (containerSocket.readyState != 1) {
+    console.log("Socket not open: " + containerSocket.readyState);
+    containerSocket = so2();
+  }
+  console.log( "start: " + containerid );
+  spin_button(containerid);
+  containerSocket.send(JSON.stringify({
+    'command': 'container-start',
+    'container-id': containerid,
+  }));
+});
+
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/js/bootstrap5-toggle.min.js"></script>
 {% endblock %}
