--- a/kooplexhub/project/templates/project_layout.html
+++ b/kooplexhub/project/templates/project_layout.html
@@ -1,51 +1,23 @@
 {% extends "layout.html" %}
-{% load static %}
-{% load project_buttons %}
 
 {% block page_title %}Kooplex Projects{% endblock %}
 
-{% block head_content %}
-{% block head_child %}{% endblock %}
-<style>
-.form-control:focus {
-  border-color: gray;
-  box-shadow: inset 0 1px 1px gray, 0 0 8px gray;
-}
-</style>
-{% endblock %}
-
-
 {% block help %} 
-{% include 'projecthelp.html' %}
-
-  {% endblock %}
+  {% include 'projecthelp.html' %}
+{% endblock %}
 
 
 {% block submenu %}
 <ul class="navbar-nav flex-row flex-md-row">
   <li class="ms-3 nav-item text-center">
-    <a data-toggle="tooltip" title="New project" data-placement="bottom" class="nav-link {% if submenu == 'new' %}active border-2 border-bottom{% endif %}" href="{% url 'project:new' %}"><i class="bi bi-bag-plus"></i><span class="d-sm-block d-none">&nbsp;New project</span></a>
+    <a data-toggle="tooltip" title="New project" data-placement="bottom" class="nav-link {% if submenu == 'new' %}active border-2 border-bottom{% endif %}" href="{% url 'project:new' %}"><i class="bi bi-bag-plus"></i><span class="d-md-block d-none">&nbsp;New project</span></a>
   </li>
   <li class="ms-3 nav-item text-center">
-    <a data-toggle="tooltip" title="Join" data-placement="bottom" class="nav-link {% if submenu == 'join' %}active border-2 border-bottom{% endif %}" href="{% url 'project:join' %}"><i class="bi bi-bag-heart"></i><span class="d-sm-block d-none">&nbsp;Join project</span></a>
+    <a data-toggle="tooltip" title="Join" data-placement="bottom" class="nav-link {% if submenu == 'join' %}active border-2 border-bottom{% endif %}" href="{% url 'project:join' %}"><i class="bi bi-bag-heart"></i><span class="d-md-block d-none">&nbsp;Join project</span></a>
   </li>
   <li class="ms-3 nav-item text-center">
-    <a data-toggle="tooltip" title="Lit project" data-placement="bottom" class="nav-link {% if submenu == 'list' %}active border-2 border-bottom{% endif %}" href="{% url 'project:list' %}"><i class="bi bi-bag-dash"></i><span class="d-sm-block d-none">&nbsp;List project</span></a>
-  </li>
-  <li class="ms-3 nav-item text-center">
-    <a data-toggle="tooltip" title="Show/hide project" data-placement="bottom" class="nav-link {% if submenu == 'showhide' %}active border-2 border-bottom{% endif %}" href="{% url 'project:showhide' %}">{% number_square "bi bi-eye-slash" user.profile.number_of_hidden_projects %}<span class="d-sm-block d-none">&nbsp;Show/hide project</span></a>
+    <a data-toggle="tooltip" title="Lit project" data-placement="bottom" class="nav-link {% if submenu == 'list' %}active border-2 border-bottom{% endif %}" href="{% url 'project:list' %}"><i class="bi bi-bag-dash"></i><span class="d-md-block d-none">&nbsp;List project</span></a>
   </li>
 </ul>
-{% endblock %}
-
-{% block bodycontent %}
-<div class="container mt-4">
-{% block realcontent %}
-  <div class="card shadow p-3 mb-2 mt-3 bg-light rounded"> 
-    <h6 class="card-title">Nothing interesting</h6>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-  </div>
-{% endblock %}
-</div>
 {% endblock %}
 
