--- a/kooplexhub/project/templates/project_new.html
+++ b/kooplexhub/project/templates/project_new.html
@@ -2,8 +2,7 @@
 
 {% load extras %}
 
-{% block realcontent %}
-
+{% block bodycontent %}
 <div class="container" style="overflow-x:hidden;">
   <form id="project_new" class="form-horizontal was-validated" action="{% url 'project:new' %}" method="post">
     {% csrf_token %}
