--- a/kooplexhub/report/templates/report_list.html
+++ b/kooplexhub/report/templates/report_list.html
@@ -1,34 +1,28 @@
 {% extends "report_layout.html" %}
 
-{% load static %}
-
-
 {% block head_content %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
 {% endblock %}
 
 
-{% block realcontent %}
+{% block bodycontent %}
 {# the search bar #}
 {% if reports %}
 <div class="card border border-light border-3 mx-5 mb-3 rounded-3">
   <div class="input-group">
-    <div class="input-group-prepend">
-      <div class="input-group-text"><span class="bi bi-search"></span></div>
-    </div>
+    <span class="input-group-text"><span class="bi bi-search"></span></span>
     <input class="form-control" type="text" id="search_report" placeholder="Search by report title, creator or tag" title="Type in a name" autofocus >
-    {# toggler to narrow selection according to creator #}
-    <div class="input-group-prepend m-2 ms-3">
+    <span class="input-group-text">
+      {# toggler to narrow selection according to creator #}
       <input id="search_user_creator" data-size="mini" data-width="100"
-             class="ms-2"
              type="checkbox" data-toggle="toggle" name="search_creator"
              data-on="Your reports"
              data-off="All reports"
              data-onstyle="success" data-offstyle="secondary">
-    </div>
+    </span>
   </div>
-  {# FIXME: a list of most popular tags #}
 </div>
+  {# FIXME: a list of most popular tags #}
 {% endif %}
 
 {# render the report cards #}
@@ -96,18 +90,6 @@ function set_visibility() {
       $( this ).hide();
     }
   });
-};
-
-{# my boolean converter #}
-function B(x) {
-  if (typeof x === 'boolean') {
-    return x;
-  }
-  if (typeof x === 'string') {
-    return Boolean(x == 'true') || Boolean(x == 'True');
-  }
-  console.log("fallback to unhandled type");
-  return Boolean(x);
 };
 
 {# narrow selection whether user is the creator of the report #}
